# azure-agentic-platform

./: .continue-here.md  .gitignore  CLAUDE.md  README.md  TODO.md  conftest.py  pyproject.toml  run-mock.sh  tab-issues.md
.github/workflows/: agent-eval.yml  agent-images.yml  agent-spec-lint.yml  api-gateway-build.yml  api-gateway-web-ui-ci.yml  arc-mcp-server-build.yml  azure-mcp-server-build.yml  base-image.yml  build-runner-image.yml  container-app-deploy.yml  deploy-all-images.yml  detection-plane-ci.yml  docker-push.yml  phase5-ci.yml  phase6-ci.yml  phase7-e2e.yml  prod-db-setup.yml  prod-seed-runbooks.yml  security-review.yml  staging-e2e-simulation.yml  teams-bot-api-gateway-ci.yml  teams-bot-build.yml  terraform-apply.yml  terraform-detection.yml  terraform-plan.yml  web-ui-build.yml
.planning/: .continue-here.md  BACKLOG.md  GAP-ANALYSIS-2026-04-19.md  HANDOFF.json  PROJECT.md  PROMPT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: agent-deployment-and-mcp-wiring.md  chat-orchestrator-not-responding.md  chat-panel-scroll-not-working.md  (+11 more)
agents/: Dockerfile.base  README.md  __init__.py  requirements-base.txt
docker/: README.md
docs/: BOOTSTRAP.md  MANUAL-SETUP.md  README.md  observability-wiring.md
e2e/: README.md  arc-mcp-server.spec.ts  e2e-audit-export.spec.ts  e2e-hitl-approval.spec.ts  e2e-incident-flow.spec.ts  e2e-rbac.spec.ts  e2e-sse-reconnect.spec.ts  e2e-teams-roundtrip.spec.ts  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  prod-debug.spec.ts  sc1.spec.ts  sc2.spec.ts  sc5.spec.ts  sc6.spec.ts
fabric/: README.md
migrations/: 008_tenants.sql  README.md
scripts/: README.md  bootstrap-github-secrets.sh  bootstrap-state.sh  configure-orchestrator.py  deploy-azure-mcp-server.sh  domain-agent-ids.json  grant-cosmos-rbac.sh  grant-state-rbac.sh  lint_sops.py  provision-domain-agents.py  provision-foundry-agents.py  register_agents.py  run-mock.sh  seed-compliance-mappings.py  setup_spn.sh  update-domain-agent-prompts.py  upload_sops.py  verify-arc-connectivity.sh  verify-managed-identity.sh  wire-domain-agents.py
services/: README.md
services/detection-plane/: README.md  SUPPRESSION.md  alert_state.py  classify_domain.py  dedup.py  models.py  payload_mapper.py  pyproject.toml
services/detection-plane/docs/: AUDIT-003-onelake-setup.md
services/detection-plane/tests/: conftest.py
services/detection-plane/tests/integration/: test_activity_log.py  test_dedup_load.py  test_pipeline_flow.py  test_round_trip.py  test_state_sync.py  test_suppression.py
services/detection-plane/tests/unit/: test_alert_state.py  test_classify_domain.py  test_dedup.py  test_kql_pipeline.py  test_payload_mapper.py  test_user_data_function.py
sops/: README.md
tasks/: lessons.md
terraform/: README.md
tests/: README.md  test_alert_rule_audit.py  test_backup_compliance.py  test_capacity_endpoints.py  test_capacity_planner.py  test_identity_risk_service.py  test_maintenance_service.py  test_private_endpoint_service.py  test_vm_extension_service.py
(+1925 files in other folders)
